--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-discord
-discord-py-slash-command
-asyncio
-aiosqlite
-owotext
-pygicord
-aiohttp
-beautifulsoup4
-requests
+flask
 Pillow
+discord
+asyncio
+owotext
+aiohttp
+pygicord
+requests
+aiosqlite
+beautifulsoup4
+discord-py-slash-command
