--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.linting.PylintEnabled": false,
     "python.analysis.disabled": [
         "unresolved-import"
-    ]
+    ],
+    "python.linting.enabled": false
 }
