dumb git things part 2

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ __pycache__
 cogs/__pycache__
 cogs/core/__pycache__
 
+templates
+
 __*.py
+buffer.json
 private.py
+todo.py
+user_prefixes.json
 webserv.py
